Fix T89581: Cycles crash rendering some OpenVDB files with inactive voxels

Print an error message instead.